--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,21 @@
     <string name="app_name">Porfolio</string>
     <string name="esther_jolugba">Esther Jolugba</string>
     <string name="mobile_developer">Mobile developer</string>
-    <string name="bio">I am a girl who wants to live in a world filled with innovative problem solving software.</string>
+    <string name="bio">I am a girl who wants to live in a world filled with\n innovative problem solving software.</string>
+    <string name="play_store">Play Store</string>
+    <string name="github">Github</string>
+    <string name="bitbucket">Bitbucket</string>
+    <string name="twitter">Twitter</string>
+    <string name="instagram">Instagram</string>
+    <string name="google_plus">Google Plus</string>
+    <string name="youtube">Youtube</string>
+    <string name="facebook">Facebook</string>
+    <string name="dribble">Dribble</string>
+    <string name="linkedin">Linkedin</string>
+    <string name="e_mail">E-mail</string>
+    <string name="whatsapp">Whatsapp</string>
+    <string name="android">Android</string>
+    <string name="website">Website</string>
+    <string name="skype">Skype</string>
+    <string name="google">Google</string>
 </resources>
