--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Porfolio</string>
+    <string name="app_name">Portfolio</string>
     <string name="esther_jolugba">Esther Jolugba</string>
     <string name="mobile_developer">Mobile developer</string>
     <string name="bio">I am a girl who wants to live in a world filled with\n innovative problem solving software.</string>
