--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,13 @@
     <string name="website">Website</string>
     <string name="skype">Skype</string>
     <string name="google">Google</string>
+    <string name="email_address">Email Address</string>
+    <string name="fullname">Fullname</string>
+    <string name="password">Password</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="sign_up">sign up</string>
+    <string name="don_t_have_an_account">Don\'t have an account?</string>
+    <string name="sign_in">Sign in</string>
+    <string name="do_you_have_an_account">Do you have an account?</string>
 </resources>
