--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="don_t_have_an_account">Don\'t have an account?</string>
     <string name="sign_in">Sign in</string>
     <string name="do_you_have_an_account">Do you have an account?</string>
+    <string name="textview">TextView</string>
 </resources>
