--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="esther_jolugba">Esther Jolugba</string>
     <string name="mobile_developer">Mobile developer</string>
     <string name="bio">I am a girl who wants to live in a world filled with\n innovative problem solving software.</string>
+    <string name="bio_land">I am a girl who wants to live in a world filled with innovative problem solving software.</string>
     <string name="play_store">Play Store</string>
     <string name="github">Github</string>
     <string name="bitbucket">Bitbucket</string>
